--- a/main/main.css
+++ b/main/main.css
@@ -1,12 +1,18 @@
-.row, .card {
+.card {
     padding:0;
     margin:0;
 }
-.col-xl-4 {
+.col-xl-4, .col-xl-3{
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
+}
+.row {
+    margin:0;
     padding:10px;
 }
-#row-1 {
-    padding:10px;
+#row-2 {
+    padding-top:0;
 }
 .card-btn-group {
     position:absolute;
@@ -17,4 +23,10 @@
 }
 .card-text {
     margin-bottom:50px;
+}
+.footer-image {
+    height:200px;
+}
+#footer-container {
+    text-align:center;
 }
